...
        .signInWithEmailAndPassword(email, password)
        .catch(error => handleLogInErrorsBackEnd(error.code));
    }
  }

  return (
    <View style={styles.wrapper} testID={'log_in_page'}>
      <View style={styles.topBar}>
        <StatusBar translucent={true} backgroundColor="transparent" />
        <Text style={textStyles.formTitle}>Log In</Text>
      </View>
      <View style={styles.paddedContainer}>
        <View style={styles.formContainer}>
...
            Forgot your password?
          </Text>
          <Text
            style={[textStyles.hyperlink]}
            onPress={() => navigation.navigate('Sign Up Page One')}
          >
            New? Create an account
          </Text>
        </View>
        <View style={styles.buttonContainer}>
          <CustomButton
            color={'green'}
            text={'Log In'}
...
